# jenkins-python-public

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: logic.py  main.py
tests/: test_api.py  test_logic.py
